--- a/model_files/CSE6SSM/FlexibleSUSY.m.in
+++ b/model_files/CSE6SSM/FlexibleSUSY.m.in
@@ -165,6 +165,17 @@ ExtraSLHAOutputBlocks = {
                 {2, FlexibleSUSYObservable`CpHiggsGluonGluon},
                 {3, FlexibleSUSYObservable`CpPseudoScalarPhotonPhoton},
                 {4, FlexibleSUSYObservable`CpPseudoScalarGluonGluon} } },
+   {FlexibleSUSYLowEnergy,
+           {{21, FlexibleSUSYObservable`aMuon},
+            {23, FlexibleSUSYObservable`EDM[Fe[1]]},
+            {24, FlexibleSUSYObservable`EDM[Fe[2]]},
+            {25, FlexibleSUSYObservable`EDM[Fe[3]]}, 
+            {26, FlexibleSUSYObservable`MuEGamma[Fe[2], Fe[1], VP]}, 
+            {27, FlexibleSUSYObservable`MuEGamma[Fd[3], Fd[2], VP]}, 
+    (*{28, FlexibleSUSYObservable`MuEGamma[Fd[3], Fd[2], VG]},*)
+            {29, FlexibleSUSYObservable`FToFConversionInNucleus[Fe[2], Fe[1], Au]}
+           } 
+   },
    {Au,        {{1, 1, T[Yu][1,1] / Yu[1,1]},
                 {2, 2, T[Yu][2,2] / Yu[2,2]},
                 {3, 3, T[Yu][3,3] / Yu[3,3]} } },
