the signature of functions that are put in FFV_form_factors header uses valarray; added appropriate include statement

--- a/templates/FFV_form_factors.hpp.in
+++ b/templates/FFV_form_factors.hpp.in
@@ -28,9 +28,10 @@
 #ifndef @ModelName@_FFVFormFactors_H
 #define @ModelName@_FFVFormFactors_H
 
+#include <valarray>
+
 using namespace flexiblesusy;
 using namespace cxx_qft;
-
 
 namespace flexiblesusy {
 class @ModelName@_mass_eigenstates;
