--- a/templates/FFV_form_factors.cpp.in
+++ b/templates/FFV_form_factors.cpp.in
@@ -281,8 +281,8 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
          const auto mF = context.mass<F>(fermionFieldIndicesIn);
          const auto x = pow(mF/mS, 2);
 
+         // TODO: check the sign convention of this coupling
          std::complex<double> vector_boson_coupling {vertexEmit.value(1,0)};
-         std::cout << "S: " << vector_boson_coupling << '\n';
 
          // eq. 15 of hep-ph/9510309 (possibly with different sign)
          const std::complex<double> A1L =
@@ -365,7 +365,6 @@ std::valarray<std::complex<double>> FFVEmitterF<Fj, Fi, V, F, S>::value(
          const auto x = pow(mF/mS, 2);
 
          std::complex<double> vector_boson_coupling {vertexEmit.left()};
-         std::cout << "F: " << vector_boson_coupling << '\n';
 
          // eq. 18 of hep-ph/9510309 (possibly with different sign)
          const std::complex<double> A1L =
