make the MuEGamma observable work with fermion without an index, like gluino

--- a/templates/observables.cpp.in
+++ b/templates/observables.cpp.in
@@ -43,7 +43,7 @@
 #define AMUGM2CALCUNCERTAINTY a_muon_gm2calc_uncertainty
 #define EDM0(p) edm_ ## p
 #define EDM1(p,idx) edm_ ## p ## _ ## idx
-#define MuEGamma0(p) mu_to_egamma_ ## p
+#define MuEGamma0(pIn, pOut, spec) pIn ## _to_ ## pOut ## _ ## spec
 #define MuEGamma1(pIn,idxIn,pOut,idxOut,spec) pIn ## _to_ ## pOut ## _ ## spec
 #define FToFConversion1(pIn,idxIn,pOut,idxOut,nuclei) pIn ## _to_ ## pOut ## _ ## in_nucleus
 #define EFFCPHIGGSPHOTONPHOTON eff_cp_higgs_photon_photon
