--- a/templates/edm.cpp.in
+++ b/templates/edm.cpp.in
@@ -159,16 +159,14 @@ EDMField, PhotonEmitter, ExchangeField
                          PhotonEmitter
                          >;
 
-   constexpr auto indexBounds = FermionVertex::index_bounds;
-
-   for (const auto& index: indexBounds) {
-      const auto edmFieldIndices = FermionVertex::template fieldIndices<0>(index);
+   for (const auto& index: index_range<FermionVertex>()) {
+      const auto edmFieldIndices = FermionVertex::template field_indices<0>(index);
 
       if (edmFieldIndices != indices)
          continue;
 
-      const auto photonEmitterIndices = FermionVertex::template fieldIndices<2>(index);
-      const auto exchangeFieldIndices = FermionVertex::template fieldIndices<1>(index);
+      const auto photonEmitterIndices = FermionVertex::template field_indices<2>(index);
+      const auto exchangeFieldIndices = FermionVertex::template field_indices<1>(index);
       const auto vertex = FermionVertex::evaluate(index, context);
 
       const auto photonEmitterMass = context.mass<PhotonEmitter>(photonEmitterIndices);
@@ -204,16 +202,14 @@ EDMField, PhotonEmitter, ExchangeField
                          PhotonEmitter
                          >;
 
-   constexpr auto indexBounds = FermionVertex::index_bounds;
-
-   for (const auto& index: indexBounds) {
-      const auto edmFieldIndices = FermionVertex::template fieldIndices<0>(index);
+   for (const auto& index: index_range<FermionVertex>()) {
+      const auto edmFieldIndices = FermionVertex::template field_indices<0>(index);
 
       if (edmFieldIndices != indices)
          continue;
 
-      const auto photonEmitterIndices = FermionVertex::template fieldIndices<2>(index);
-      const auto exchangeFieldIndices = FermionVertex::template fieldIndices<1>(index);
+      const auto photonEmitterIndices = FermionVertex::template field_indices<2>(index);
+      const auto exchangeFieldIndices = FermionVertex::template field_indices<1>(index);
       const auto vertex = FermionVertex::evaluate(index, context);
 
       const auto photonEmitterMass = context.mass<PhotonEmitter>(photonEmitterIndices);
