Split cxx_diagrams c++ code into smaller parts.

--- a/templates/edm.cpp.in
+++ b/templates/edm.cpp.in
@@ -28,7 +28,9 @@
 #include "@ModelName@_edm.hpp"
 #include "@ModelName@_mass_eigenstates.hpp"
 
-#include "@ModelName@_cxx_diagrams.hpp"
+#include "cxx_qft/@ModelName@_qft.hpp"
+
+#include "numerics2.hpp"
 
 #define INPUTPARAMETER(p) context.model.get_input().p
 #define MODELPARAMETER(p) context.model.get_##p()
@@ -36,7 +38,7 @@
 #define PHASE(p) context.model.get_##p()
 
 using namespace flexiblesusy;
-using namespace cxx_diagrams;
+using namespace @ModelName@_cxx_diagrams;
 
 namespace {
 static constexpr double oneOver16PiSquared = 0.0063325739776461107152;
