--- a/templates/a_muon.cpp.in
+++ b/templates/a_muon.cpp.in
@@ -28,7 +28,10 @@
 #include "@ModelName@_a_muon.hpp"
 #include "@ModelName@_mass_eigenstates.hpp"
 
-#include "@ModelName@_cxx_diagrams.hpp"
+#include "cxx_qft/@ModelName@_qft.hpp"
+
+#include "wrappers.hpp"
+#include "numerics2.hpp"
 
 #define INPUTPARAMETER(p) context.model.get_input().p
 #define MODELPARAMETER(p) context.model.get_##p()
@@ -36,9 +39,9 @@
 #define PHASE(p) context.model.get_##p()
 
 using namespace flexiblesusy;
-using namespace cxx_diagrams;
+using namespace @ModelName@_cxx_diagrams;
 
-using Muon = @AMuon_MuonField@;
+using Muon = fields::@AMuon_MuonField@;
 
 namespace {
 static constexpr double oneOver16PiSquared = 0.0063325739776461107152;
@@ -260,6 +263,8 @@ double calculate_a_muon_impl(@ModelName@_mass_eigenstates& model)
 
    EvaluationContext context{ model };
    double val = 0.0;
+   
+   using namespace @ModelName@_cxx_diagrams::fields;
 
 @AMuon_Calculation@
 
