--- a/templates/cxx_qft/vertices.hpp.in
+++ b/templates/cxx_qft/vertices.hpp.in
@@ -19,14 +19,14 @@
 // File generated at @DateAndTime@
 
 /**
- * @file @ModelName@_cxx_diagrams.hpp
+ * @file cxx_qft/@ModelName@_vertices.hpp
  *
  * This file was generated at @DateAndTime@ with FlexibleSUSY
  * @FlexibleSUSYVersion@ and SARAH @SARAHVersion@ .
  */
 
-#ifndef @ModelName@_CXXDIAGRAMS_H
-#define @ModelName@_CXXDIAGRAMS_H
+#ifndef @ModelName@_CXXQFT_VERTICES_H
+#define @ModelName@_CXXQFT_VERTICES_H
 
 #include "numerics2.hpp"
 #include "wrappers.hpp"
@@ -59,157 +59,7 @@
 #define PHASE(p) context.model.get_##p()
 
 namespace flexiblesusy {
-namespace cxx_diagrams {
-
-// Declare a type that can hold the field indices for any given field
-template<class Field> struct field_indices {
-   using type = std::array<int, Field::numberOfFieldIndices>;
-};
-
-namespace detail
-{
-  template<class Field>
-  struct number_of_field_indices
-  {
-    static constexpr int value =
-      std::tuple_size<typename field_indices<Field>::type>::value;
-    using type = boost::mpl::int_<value>;
-  };
-
-  template<class Sequence>
-  struct total_number_of_field_indices
-  {
-    using type = typename boost::mpl::fold<
-      Sequence,
-      boost::mpl::int_<0>,
-      boost::mpl::plus<
-        boost::mpl::_1,
-        number_of_field_indices<
-          boost::mpl::_2
-        >
-      >
-    >::type;
-    static constexpr int value = type::value;
-  };
-}
-
-template<class Field> struct bar
-{
-  using index_bounds = typename Field::index_bounds;
-  static constexpr int numberOfGenerations = Field::numberOfGenerations;
-  using sm_flags = typename Field::sm_flags;
-  static constexpr int numberOfFieldIndices = Field::numberOfFieldIndices;
-  static constexpr double electric_charge = - Field::electric_charge;
-  using lorentz_conjugate = Field;
-
-  using type = bar<Field>;
-};
-
-template<class Field> struct conj
-{
-  using index_bounds = typename Field::index_bounds;
-  static constexpr int numberOfGenerations = Field::numberOfGenerations;
-  using sm_flags = typename Field::sm_flags;
-  static constexpr int numberOfFieldIndices = Field::numberOfFieldIndices;
-  static constexpr double electric_charge = - Field::electric_charge;
-  using lorentz_conjugate = Field;
-
-  using type = conj<Field>;
-};
-
-// Double Lorentz conjugation
-template<class Field> struct bar<bar<Field>> {
-   using type = Field;
-};
-template<class Field> struct conj<conj<Field>> {
-   using type = Field;
-};
-
-// Remove Lorentz conjugation
-template<class Field> struct remove_lorentz_conjugation {
-   using type = Field;
-};
-
-template<class Field> struct remove_lorentz_conjugation<bar<Field>> {
-   using type = Field;
-};
-
-template<class Field> struct remove_lorentz_conjugation<conj<Field>> {
-   using type = Field;
-};
-
-
-template<class Field>
-typename std::enable_if<
-  Field::numberOfGenerations != 1,
-  bool
->::type
-isSMField(const typename field_indices<Field>::type& indices)
-{
-  boost::array<bool, Field::numberOfGenerations> sm_flags;
-
-#if BOOST_VERSION >= 105800
-  boost::fusion::move(typename Field::sm_flags(), sm_flags);
-#else
-  boost::fusion::copy(typename Field::sm_flags(), sm_flags);
-#endif
-
-  return sm_flags[indices.front()];
-}
-
-template<class Field>
-typename std::enable_if<
-  Field::numberOfGenerations == 1,
-  bool
->::type
-isSMField(const typename field_indices<Field>::type &)
-{
-  return boost::mpl::at_c<
-    typename Field::sm_flags,
-    0
-  >::type::value;
-}
-
-namespace detail
-{
-template<class Begin, class End>
-decltype(
-  boost::make_iterator_range(
-    multiindex<Begin, End>::begin(),
-    multiindex<Begin, End>::end()
-  )
-)
-make_index_range( void )
-{
-  using index = multiindex<Begin, End>;
-
-  return boost::make_iterator_range(
-    index::begin(), index::end()
-  );
-}
-}
-
-template<class ObjectWithIndexBounds>
-struct index_bounds_of
-{
-  using type = typename ObjectWithIndexBounds::index_bounds;
-};
-
-template<class ObjectWithIndexBounds>
-decltype(detail::make_index_range<
-  typename index_bounds_of<ObjectWithIndexBounds>::type::first,
-  typename index_bounds_of<ObjectWithIndexBounds>::type::second
->())
-index_range( void )
-{
-  return detail::make_index_range<
-    typename index_bounds_of<ObjectWithIndexBounds>::type::first,
-    typename index_bounds_of<ObjectWithIndexBounds>::type::second
-  >();
-}
-
-@CXXDiagrams_Fields@
-
+namespace @ModelName@_cxx_diagrams {
 class ScalarVertex {
 private:
   std::complex<double> val;
@@ -319,13 +169,13 @@ public:
       boost::mpl::joint_view<
         boost::mpl::first<boost::mpl::_1>,
         boost::mpl::first<
-          index_bounds_of<boost::mpl::_2>
+          detail::index_bounds<boost::mpl::_2>
         >
       >,
       boost::mpl::joint_view<
         boost::mpl::second<boost::mpl::_1>,
         boost::mpl::second<
-          index_bounds_of<boost::mpl::_2>
+          detail::index_bounds<boost::mpl::_2>
         >
       >
     >
@@ -379,46 +229,19 @@ public:
     const EvaluationContext& context);
 };
 
-
-/**
-* @class EvaluationContext
-* @brief Represents an evaluation context.
-*
-* It simply contains a reference to a model object.
-* All computational functions are forwarded to that object,
-* e.g. mass calculation functions.
-*/
-struct EvaluationContext {
-   @ModelName@_mass_eigenstates& model; ///< The model object.
-
-   template<class Field>
-   double mass(const typename field_indices<Field>::type& indices) const
-   {
-      using CleanField = typename remove_lorentz_conjugation<Field>::type;
-      return mass_impl<CleanField>(indices);
-   }
-
-private:
-   template<class Field>
-   double mass_impl(const typename field_indices<Field>::type& indices) const;
-};
-
-
 @CXXDiagrams_VertexData@
 
 
 @CXXDiagrams_Vertices@
 
-
-@CXXDiagrams_MassFunctions@
-
-namespace impl {
+namespace detail {
 @CXXDiagrams_UnitCharge@
 }
 
 static double unit_charge(const EvaluationContext& context)
 {
-   return -impl::unit_charge(context).left().real() / Electron::electric_charge;
+   return - (detail::unit_charge(context).left().real() /
+     fields::Electron::electric_charge);
 }
 
 } // namespace cxx_diagrams
