--- a/templates/cxx_qft/context_base.hpp.in
+++ b/templates/cxx_qft/context_base.hpp.in
@@ -19,19 +19,50 @@
 // File generated at @DateAndTime@
 
 /**
- * @file cxx_qft/@ModelName@_qft.hpp
+ * @file cxx_qft/@ModelName@_context_base.hpp
  *
  * This file was generated at @DateAndTime@ with FlexibleSUSY
  * @FlexibleSUSYVersion@ and SARAH @SARAHVersion@ .
  */
 
-#ifndef @ModelName@_CXXQFT_QFT_H
-#define @ModelName@_CXXQFT_QFT_H
-
-#include "multiindex.hpp"
+#ifndef @ModelName@_CXXQFT_CONTEXT_BASE_H
+#define @ModelName@_CXXQFT_CONTEXT_BASE_H
 
 #include "@ModelName@_fields.hpp"
-#include "@ModelName@_context_base.hpp"
+
+namespace flexiblesusy {
+namespace @ModelName@_cxx_diagrams {
+struct ContextBase
+{
+  @ModelName@_mass_eigenstates& model; ///< The model object.
+ 
+  template<class Field>
+  double mass(const typename field_indices<Field>::type& indices) const
+  {
+    using CleanField = typename fields::remove_lorentz_conjugation<
+      Field
+    >::type;
+    return mass_impl<CleanField>(indices);
+  }
+
+  ContextBase( @ModelName@_mass_eigenstates &m ) : model( m ) {}
+  ContextBase( const ContextBase & ) = default;
+  ContextBase( ContextBase && ) = default;
+  
+  ContextBase &operator=( const ContextBase & ) = default;
+  ContextBase &operator=( ContextBase && ) = default;
+  
+  virtual ~ContextBase( void ) = default;
+private:
+  template<class Field>
+  double mass_impl(const typename field_indices<Field>::type& indices) const;
+};
+
+@CXXDiagrams_MassFunctions@
+
+} // namespace cxx_diagrams
+} // namespace flexiblesusy
+
 #include "@ModelName@_vertices.hpp"
 
 #endif
