--- a/templates/a_muon.cpp.in
+++ b/templates/a_muon.cpp.in
@@ -51,7 +51,7 @@ double OneLoopFunctionF2C(double);
 double OneLoopFunctionF1N(double);
 double OneLoopFunctionF2N(double);
 
-double get_QED_2L(ContextBase&);
+double get_QED_2L(context_base&);
 
 /**
  * @class AMuonVertexCorrectionSF
@@ -72,7 +72,7 @@ double get_QED_2L(ContextBase&);
 template<class PhotonEmitter, class ExchangeParticle>
 struct AMuonVertexCorrectionSF {
    static double value(const typename field_indices<Muon>::type& indices,
-                       const ContextBase& context);
+                       const context_base& context);
 };
 
 /**
@@ -94,7 +94,7 @@ struct AMuonVertexCorrectionSF {
 template<class PhotonEmitter, class ExchangeParticle>
 struct AMuonVertexCorrectionFS {
    static double value(const typename field_indices<Muon>::type& indices,
-                       const ContextBase& context);
+                       const context_base& context);
 };
 
 /**
@@ -261,7 +261,7 @@ double calculate_a_muon_impl(@ModelName@_mass_eigenstates& model)
 {
    VERBOSE_MSG("@ModelName@_a_muon: calculating a_mu at Q = " << model.get_scale());
 
-   ContextBase context{ model };
+   context_base context{ model };
    double val = 0.0;
    
    using namespace @ModelName@_cxx_diagrams::fields;
@@ -321,7 +321,7 @@ std::pair<double,double> vary_scale(const @ModelName@_mass_eigenstates& model)
    return std::make_pair(*(minmax.first), *(minmax.second));
 }
 
-double muonPhysicalMass(const ContextBase& context)
+double muonPhysicalMass(const context_base& context)
 {
 @AMuon_MuonPhysicalMass@
 }
@@ -342,7 +342,7 @@ double @ModelName@_a_muon::calculate_a_muon(const @ModelName@_mass_eigenstates& 
       return std::numeric_limits<double>::quiet_NaN();
    }
 
-   double m_muon_pole = muonPhysicalMass(ContextBase{model});
+   double m_muon_pole = muonPhysicalMass(context_base{model});
 
    if (m_muon_pole == 0.0) {
       model.solve_ewsb();
@@ -373,7 +373,7 @@ double @ModelName@_a_muon::calculate_a_muon_uncertainty(const @ModelName@_mass_e
 }
 
 namespace {
-double get_QED_2L(ContextBase& context)
+double get_QED_2L(context_base& context)
 {
    const double MSUSY = Abs(get_MSUSY(context.model));
    const double m_muon = muonPhysicalMass(context);
@@ -386,7 +386,7 @@ double get_QED_2L(ContextBase& context)
 template<class PhotonEmitter, class ExchangeField>
 double AMuonVertexCorrectionFS<
 PhotonEmitter, ExchangeField
->::value(const typename field_indices<Muon>::type& indices, const ContextBase& context)
+>::value(const typename field_indices<Muon>::type& indices, const context_base& context)
 {
    double res = 0.0;
 
@@ -444,7 +444,7 @@ PhotonEmitter, ExchangeField
 template<class PhotonEmitter, class ExchangeField>
 double AMuonVertexCorrectionSF<
 PhotonEmitter, ExchangeField
->::value(const typename field_indices<Muon>::type& indices, const ContextBase& context)
+>::value(const typename field_indices<Muon>::type& indices, const context_base& context)
 {
    double res = 0.0;
 
