--- a/templates/FFMassiveV_form_factors.cpp.in
+++ b/templates/FFMassiveV_form_factors.cpp.in
@@ -432,7 +432,7 @@ std::valarray<std::complex<double>> FFVEmitterS<Fj, Fi, V, F, S>::value(
             spectator_indices
          );
          // not clear what the sign
-         const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value(0,1);
+         const auto SBarSVBar = -VertexSBarSVBar::evaluate(indexSBarSVBar, context).value(0,1);
          // const auto SBarSVBar = VertexSBarSVBar::evaluate(indexSBarSVBar, context).value(positive momentum index, negative momentum index);
 
          const auto mF = context.mass<F>(fermionFieldIndicesIn);
