--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -128,10 +128,10 @@ CONVERT_DOS_PATHS := config/convert_dos_paths.sh
 MATH_INC_PATHS := config/mathematica_include_paths.sh
 
 # package information files
-README_FILE    := README
+README_FILE    := README.md
 AUTHORS_FILE   := AUTHORS
 COPYING_FILE   := COPYING
-ChangeLog_FILE := ChangeLog
+ChangeLog_FILE := ChangeLog.md
 
 .PHONY:  all allsrc allexec alllib allll alltest clean clean-dep \
 	 clean-executables clean-generated clean-lib clean-obj \
