avoid config.h in thread_pool headers

--- a/templates/mass_eigenstates.cpp.in
+++ b/templates/mass_eigenstates.cpp.in
@@ -42,8 +42,11 @@
 #include "error.hpp"
 #include "pv.hpp"
 #include "raii.hpp"
-#include "thread_pool.hpp"
 #include "functors.hpp"
+
+#ifdef ENABLE_THREADS
+#include "thread_pool.hpp"
+#endif
 
 @ewsbSolverHeaders@
 @twoLoopHiggsHeaders@
