--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -128,7 +128,7 @@ CONVERT_DOS_PATHS := config/convert_dos_paths.sh
 MATH_INC_PATHS := config/mathematica_include_paths.sh
 
 # package information files
-README_FILE    := README.md
+README_FILE    := README.rst
 AUTHORS_FILE   := AUTHORS
 COPYING_FILE   := COPYING
 ChangeLog_FILE := ChangeLog.md
