--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ config.log
 config.boost
 config.math
 config.sarah
+config.feynarts
+config.formcalc
 createmodel.log
 flexiblesusy-config
 Makefile
