--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -23,6 +23,8 @@ ENABLE_SQLITE      := @ENABLE_SQLITE@
 ENABLE_STATIC      := @ENABLE_STATIC@
 ENABLE_THREADS     := @ENABLE_THREADS@
 ENABLE_TSIL        := @ENABLE_TSIL@
+ENABLE_FEYNARTS    := @ENABLE_FEYNARTS@
+ENABLE_FORMCALC    := @ENABLE_FORMCALC@
 
 # C/C++ preprocessor defines
 ENABLE_COLORS         := @ENABLE_COLORS@
